--- a/themes/comite/layouts/default.htm
+++ b/themes/comite/layouts/default.htm
@@ -1,6 +1,11 @@
 description = "default layout"
+
+[session]
+security = "all"
 ==
 <!DOCTYPE html>
+{% component 'session' %}
+
 <html>
     <head>
         <meta charset="utf-8">
