--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -28,6 +28,14 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+
+      <li class="nav-item">
+        <a  class="nav-link"href="/login">Iniciar Sesión</a>
+      </li>
+
+      <li class="nav-item">
+        <a  class="nav-link"href="/register">Registrarse</a>
+      </li >
     </ul>
   </div>
 
