GREAT ADVANCE :D -> implementing user login and register with plugin

--- a/themes/comite/layouts/default.htm
+++ b/themes/comite/layouts/default.htm
@@ -15,8 +15,9 @@ security = "all"
         <meta name="author" content="OctoberCMS">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="generator" content="OctoberCMS">
-        <!-- <link rel="icon" type="image/png" href="{{ 'assets/images/october.png'|theme }}"> -->
+        <link rel="icon" type="image/png" href="{{ 'assets/images/icon.png'|theme }}">
         <link href="{{ 'assets/dist/css/app.css'|theme }}" rel="stylesheet">
+        {% styles %}
     </head>
     <body>
 
@@ -43,6 +44,8 @@ security = "all"
 
         <!-- Scripts -->
         <script src="{{ 'assets/dist/js/app.js'|theme }}"></script>
+        {% framework extras %}
+        {% scripts %}
 
     </body>
 </html>
