--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -1,7 +1,7 @@
 ==
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-  <a class="navbar-brand" href="#" id="title-header">Comite Usuarios de Nueva Casarapa</a>
+  <a class="navbar-brand" href="/" id="title-header">Comite Usuarios de Nueva Casarapa</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,7 @@
   <div class="collapse navbar-collapse div-abs-right" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contactanos</a>
@@ -23,19 +23,33 @@
           Acerca de nosotros
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Misión</a>
+          <a class="dropdown-item" href="#">Visión</a>
+          <a class="dropdown-item" href="#">Quienes somos</a>
         </div>
       </li>
 
-      <li class="nav-item">
-        <a  class="nav-link"href="/login">Iniciar Sesión</a>
-      </li>
+      {% if user %}
+        <li class="nav-item">
+          <a class="nav-link" data-request="onLogout" data-request-data="redirect: '/'" href="#">Cerrar Sesión</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a  class="nav-link"href="/login">Iniciar Sesión</a>
+        </li>
+      {% endif %}
 
-      <li class="nav-item">
-        <a  class="nav-link"href="/register">Registrarse</a>
-      </li >
+      {% if user %}
+        <li class="nav-item">
+          <a  class="nav-link"href="/profile">Ver Perfil</a>
+        </li >
+      {% else %}
+        <li class="nav-item">
+          <a  class="nav-link"href="/register">Registrarse</a>
+        </li >
+      {% endif %}
+
+      
     </ul>
   </div>
 
