--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -25,7 +25,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Misión</a>
           <a class="dropdown-item" href="#">Visión</a>
-          <a class="dropdown-item" href="#">Quienes somos</a>
+          <a class="dropdown-item" href="#">Quiénes somos</a>
         </div>
       </li>
 
