--- a/themes/comite/assets/sass/app.scss
+++ b/themes/comite/assets/sass/app.scss
@@ -3,6 +3,7 @@
 
 @import "./icons-style.scss";
 @import "./variables.scss";
+@import "./fonts.scss";
 
 body{
     background-color: $base-background;
@@ -30,15 +31,14 @@ body{
 
 }
 
-/* Font used for Header */
-@font-face {
-    font-family:"Home";
-    src: url("/themes/comite/assets/fonts/Home.ttf") format("truetype");
-}
+
 
 #title-header{
-    font-family: Home;
-    font-size: 35px;
+    padding-left: 50px;
+    padding-top: 8px;
+    font-weight: bold;
+    font-family: Sansation;
+    font-size: 25px;
     color: $base-header;
 }
 
@@ -67,3 +67,10 @@ body{
     max-width: 400px;
 }
 
+.text-base-blue{
+    color: $base-header;
+}
+
+.img-fit-text p > img{
+    max-width: 660px;
+}
