--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -1,7 +1,7 @@
 ==
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-  <a class="navbar-brand" href="/" id="title-header">Comite Usuarios de Nueva Casarapa</a>
+  <a class="navbar-brand" href="/" id="title-header">Comite de Usuarios de Nueva Casarapa</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,16 +10,16 @@
   <div class="collapse navbar-collapse div-abs-right" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
+        <a class="nav-link font-weight-bold" href="/">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contactanos</a>
+        <a class="nav-link font-weight-bold" href="#">Contactanos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Biblioteca Virtual</a>
+        <a class="nav-link font-weight-bold" href="#">Biblioteca Virtual</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link font-weight-bold dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Acerca de nosotros
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -31,21 +31,21 @@
 
       {% if user %}
         <li class="nav-item">
-          <a class="nav-link" data-request="onLogout" data-request-data="redirect: '/'" href="#">Cerrar Sesión</a>
+          <a class="nav-link font-weight-bold" data-request="onLogout" data-request-data="redirect: '/'" href="#">Cerrar Sesión</a>
         </li>
       {% else %}
         <li class="nav-item">
-          <a  class="nav-link"href="/login">Iniciar Sesión</a>
+          <a  class="nav-link font-weight-bold"href="/login">Iniciar Sesión</a>
         </li>
       {% endif %}
 
       {% if user %}
         <li class="nav-item">
-          <a  class="nav-link"href="/profile">Ver Perfil</a>
+          <a  class="nav-link font-weight-bold"href="/profile">Ver Perfil</a>
         </li >
       {% else %}
         <li class="nav-item">
-          <a  class="nav-link"href="/register">Registrarse</a>
+          <a  class="nav-link font-weight-bold"href="/register">Registrarse</a>
         </li >
       {% endif %}
 
