--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -13,13 +13,13 @@
         <a class="nav-link font-weight-bold" href="/">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link font-weight-bold" href="#">Contactanos</a>
+        <a class="nav-link font-weight-bold disabled" href="#">Contactanos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link font-weight-bold" href="#">Biblioteca Virtual</a>
+        <a class="nav-link font-weight-bold disabled" href="#">Biblioteca Virtual</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link font-weight-bold dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link font-weight-bold dropdown-toggle disabled" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Acerca de nosotros
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
