--- a/themes/comite/partials/sidebar.htm
+++ b/themes/comite/partials/sidebar.htm
@@ -2,18 +2,28 @@
 slug = "{{ :slug }}"
 displayEmpty = 1
 categoryPage = "category-page"
+
+[searchForm]
+resultPage = "search-result"
+categoryFilter = 0
 ==
 <div class="col-md-3">
     <!-- Search Bar -->
+    
     <div class="row">
-        <div class="input-group md-form form-sm form-2 pl-0">
-            <input class="form-control my-0 py-1 red-border" type="text" placeholder="Search" aria-label="Search">
-            <div class="input-group-append">
-                <span class="input-group-text red lighten-3" id="basic-text1">
-                  <i class="fas fa-search text-grey" aria-hidden="true"></i>
-                </span>
-            </div>
-        </div>
+        <form class="form-inline" method="GET" action="{{ searchForm.resultPage|page }}">
+            <input type="text" name="search" class="form-control">
+        
+            {% if searchForm.categoryFilter %}
+                <select name="cat[]" class="form-control">
+                {% for key,cat in searchForm.categories %}
+                    <option value="{{ key }}">{{ cat }}</option>
+                {% endfor %}
+                </select>
+            {% endif %}
+        
+            <button class="btn btn btn-primary" type="submit">{{ 'Search'|_ }}</button>
+        </form>
     </div>
 
 
@@ -39,7 +49,7 @@ categoryPage = "category-page"
         </div>
         <div class="row">
             <div class="col-md-4"></div>
-            <div class="col-md-4">
+            <div class="col-md-4 p-0">
                 <button type="submit" class="btn btn-primary">Suscribirse</button>
             </div>
             <div class="col-md-4"></div>
