--- a/themes/comite/partials/sidebar.htm
+++ b/themes/comite/partials/sidebar.htm
@@ -29,46 +29,60 @@ categoryFilter = 0
 
     <!-- Social Networks -->
     <div class="row mt-5">
-        <p class="h4">Síguenos en:</p>
+        <p class="h4 text-base-blue font-weight-bold">Síguenos en:</p>
     </div>
     <div class="row">
         <div class="p-3">
-            <i class="fab fa-facebook-f rss"></i>
-            <i class="fab fa-twitter rss"></i>
-            <i class="fab fa-instagram rss"></i>
+            <a href="https:://facebook.com" class="icon-block">
+                <i class="fab fa-facebook-f rss"></i>
+            </a>
+
+            <a href="https:://twitter.com" class="icon-block">
+                <i class="fab fa-twitter rss"></i>
+            </a>
+
+            <a href="https:://instagram.com" class="icon-block">
+                <i class="fab fa-instagram rss"></i>
+            </a>
+            
         </div>
     </div>
     <br>
 
     <!-- Suscription -->
    
-    <form>
-        <div class="form-group row">
-            <label class="h4" for="exampleInputEmail1">Suscribirse para recibir noticias</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa tu Correo Electrónico">
-        </div>
-        <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 p-0">
-                <button type="submit" class="btn btn-primary">Suscribirse</button>
+    <div class="row">
+        <form>
+            <div class="form-group row">
+                <label class="h4 text-base-blue font-weight-bold" for="exampleInputEmail1">Suscribirse para recibir noticias</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa tu Correo Electrónico">
             </div>
-            <div class="col-md-4"></div>
-            
-        </div>
-    </form>
-    <br>
-    
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4 p-0">
+                    <button type="submit" class="btn btn-primary">Suscribirse</button>
+                </div>
+                <div class="col-md-4"></div>
+                
+            </div>
+        </form>
+    </div>
+
     <!-- Category List -->
-    {% if blogCategories.categories|length > 0 %}
-        <ul class="list-group">
-            {% partial blogCategories ~ "::items"
+    <div class="row mt-5">
+        <p class="h4 text-base-blue font-weight-bold">Filtrar por categoria</p>
+    </div>
+    <div class="row list-group">
+        {% if blogCategories.categories|length > 0 %}
+            {% partial 'Categories/items'
                 categories = blogCategories.categories
                 currentCategorySlug = blogCategories.currentCategorySlug
             %}
-        </ul>
-    {% else %}
-        <p>No categories were found.</p>
-    {% endif %}
+        {% else %}
+            <p>No hay categorias disponibles</p>
+        {% endif %}
+    </div>
+
 
 
 </div>
