adding some responsiveness

--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -13,7 +13,7 @@
         <a class="nav-link font-weight-bold" href="/">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link font-weight-bold disabled" href="#">Contactanos</a>
+        <a class="nav-link font-weight-bold disabled" href="#">Contáctanos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link font-weight-bold disabled" href="#">Biblioteca Virtual</a>
