--- a/themes/comite/assets/sass/app.scss
+++ b/themes/comite/assets/sass/app.scss
@@ -6,7 +6,7 @@
 @import "./fonts.scss";
 
 body{
-    background-color: $base-background;
+    background-color: $base-white;
 }
 
 /* Case Big Screen PC */
@@ -38,7 +38,7 @@ body{
     padding-top: 8px;
     font-weight: bold;
     font-family: Sansation;
-    font-size: 20px;
+    font-size: 23px;
     color: $base-header;
 }
 
@@ -73,4 +73,9 @@ body{
 
 .img-fit-text p > img{
     max-width: 660px;
+}
+
+.button-blue{
+    background-color: $base-header;
+    color: white;
 }
