--- a/themes/comite/partials/sidebar.htm
+++ b/themes/comite/partials/sidebar.htm
@@ -7,14 +7,14 @@ categoryPage = "category-page"
 resultPage = "search-result"
 categoryFilter = 0
 ==
-<div class="col-md-3">
+<div class="col-xl-3 col-12">
     <!-- Search Bar -->
-    <div class="row ">
-        <div class="col-md-12 text-center">
-            <p class="h4 text-base-blue font-weight-bold">Buscar posts</p>
+    <div class="row">
+        <div class="col-xl-12 col-12 text-center">
+            <p class="h5 text-base-blue font-weight-bold">Buscar posts</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row" style="justify-content: center;">
         <form class="form-inline" method="GET" action="{{ searchForm.resultPage|page }}">
             <input type="text" name="search" class="form-control">
         
@@ -26,19 +26,19 @@ categoryFilter = 0
                 </select>
             {% endif %}
         
-            <button class="btn btn btn-primary" type="submit">{{ 'Search'|_ }}</button>
+            <button class="btn btn button-blue" type="submit">{{ 'Buscar'|_ }}</button>
         </form>
     </div>
 
 
     <!-- Social Networks -->
     <div class="row mt-3">
-        <div class="col-md-12 text-center">
-            <p class="h4 text-base-blue font-weight-bold">Síguenos en</p>
+        <div class="col-md-12 col-12 text-center">
+            <p class="h5 text-base-blue font-weight-bold">Síguenos en</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 col-12 text-center">
             <div class="p-3">
                 <a href="https:://facebook.com" class="icon-block">
                     <i class="fab fa-facebook-f rss"></i>
@@ -57,8 +57,8 @@ categoryFilter = 0
 
     <!-- Category List -->
     <div class="row ">
-        <div class="col-md-12 text-center">
-            <p class="h4 text-base-blue font-weight-bold">Categorías</p>
+        <div class="col-md-12 col-12 text-center">
+            <p class="h5 text-base-blue font-weight-bold">Categorías</p>
         </div>
     </div>
     <div class="row list-group">
@@ -76,18 +76,15 @@ categoryFilter = 0
    
     <form>
         <div class="form-group row mt-3">
-            <div class="col-md-12 text-center">
-                <label class="h4 text-base-blue font-weight-bold" for="exampleInputEmail1">Suscripción</label>
+            <div class="col-md-12 col-12 text-center">
+                <label class="h5 text-base-blue font-weight-bold" for="exampleInputEmail1">Suscripción</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa tu Correo Electrónico">
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 p-0">
-                <button type="submit" class="btn btn-primary">Suscribirse</button>
+            <div class="col-md-12 col-12 p-0 text-center">
+                <button type="submit" class="btn button-blue">Suscribirse</button>
             </div>
-            <div class="col-md-4"></div>
-            
         </div>
     </form>
 
