--- a/themes/comite/partials/footer.htm
+++ b/themes/comite/partials/footer.htm
@@ -1,9 +1,10 @@
 <!-- Footer -->
+<hr class="solid">
 <footer class="page-footer font-small p-0">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3"> Creado por José Tirado:
-    <a href="https://github.com/jet29"> Github</a>
+  <div class="footer-copyright text-center py-3"> created by José Tirado:
+    <a href="https://github.com/jet29"> github</a>
   </div>
   <!-- Copyright -->
 
