--- a/themes/comite/partials/sidebar.htm
+++ b/themes/comite/partials/sidebar.htm
@@ -7,11 +7,11 @@ categoryPage = "category-page"
 resultPage = "search-result"
 categoryFilter = 0
 ==
-<div class="col-xl-3 col-12">
+<div class="col-xl-3 col-md-3 col-12">
     <!-- Search Bar -->
     <div class="row">
         <div class="col-xl-12 col-12 text-center">
-            <p class="h5 text-base-blue font-weight-bold">Buscar posts</p>
+            <p class="h5 text-base-blue font-weight-bold">Buscar Publicaciones</p>
         </div>
     </div>
     <div class="row" style="justify-content: center;">
