--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -1,7 +1,7 @@
 ==
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-  <a class="navbar-brand" href="/" id="title-header">Comite de Usuarios de Nueva Casarapa</a>
+  <a class="navbar-brand" href="/" id="title-header">Fundación Comite Usuarios de Nueva Casarapa</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
