--- a/themes/comite/partials/header.htm
+++ b/themes/comite/partials/header.htm
@@ -9,7 +9,7 @@
 
   <div class="collapse navbar-collapse div-abs-right" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item {% if this.page.id == 'home' %}active{% endif %}">
         <a class="nav-link font-weight-bold" href="/">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -35,17 +35,17 @@
         </li>
       {% else %}
         <li class="nav-item">
-          <a  class="nav-link font-weight-bold"href="/login">Iniciar Sesión</a>
+          <a  class="nav-link font-weight-bold {% if this.page.id == 'login' %}active{% endif %}" href="/login">Iniciar Sesión</a>
         </li>
       {% endif %}
 
       {% if user %}
         <li class="nav-item">
-          <a  class="nav-link font-weight-bold"href="/profile">Ver Perfil</a>
+          <a  class="nav-link font-weight-bold {% if this.page.id == 'profile' %}active{% endif %}"href="/profile">Ver Perfil</a>
         </li >
       {% else %}
         <li class="nav-item">
-          <a  class="nav-link font-weight-bold"href="/register">Registrarse</a>
+          <a  class="nav-link font-weight-bold {% if this.page.id == 'register' %}active{% endif %}"href="/register">Registrarse</a>
         </li >
       {% endif %}
 
